# larpomatic

./: .gitignore  README.md  mediainfo.pxd  mediainfo_wrapper.pyx
backend/: pyproject.toml
backend/larpomatic_backend/: manage.py
backend/larpomatic_backend/larpomatic_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/larpomatic_backend/larpomatic_processor/: apps.py  exceptions.py  image_handler.py
python/: larpomatic.py  mediainfo.pxd  requirements.txt
python/heif_wrapper/: libheif.pxd  libheif.pyx
resources/: IMG_7950.heic
swift/: Package.swift  PrintVideoMetadata.swift
swift/Sources/: main.swift
