[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the larpomatic iPhone image faker."
authors = ["peppapig450 <nbgenius1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
pillow = "^10.4.0"
pillow-heif = "^0.17.0"
PyExifTool = "^0.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
